(fix) Fix appearance of search overlay separator text
This PR fixes an issue where the text in the empty state of the basic search overlay got cut off by a horizontal rule.

--- a/packages/esm-outpatient-app/src/patient-search/basic-search.scss
+++ b/packages/esm-outpatient-app/src/patient-search/basic-search.scss
@@ -60,6 +60,7 @@
     border: 0;
     border-top: 1px solid $text-03;
     text-align: center;
+    overflow: visible;
     
     &::after {
       content: 'or';
